--- a/cv-frontend/src/global.scss
+++ b/cv-frontend/src/global.scss
@@ -33,6 +33,7 @@ ul {
 .app {
   color: var(--text-color1);
   background-color: var(--bg-color);
+  transition: all 0.3s ease;
 
   &.dark {
     --bg-color: #000;
